--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,29 @@
 .search{
 	width: 50% !important;
+	margin-bottom: 50px;
+}
+
+.result:hover{
+	background-color: #D3D3D3;
+}
+
+.type{
+	text-align: center;
+	border-radius: 10px;
+	width:10%;
+	float: right;
 }
 
 #prevpage{
+	float: left;
 	display: none;
+}
+
+#nextpage{
+	float: right;
+}
+
+#results{
+	width:50%;
+	margin: auto;
 }
