--- a/styles.css
+++ b/styles.css
@@ -14,6 +14,14 @@
 	float: right;
 }
 
+.type2{
+	display: block;
+	margin: auto;
+	text-align: center;
+	border-radius: 10px;
+	width:10%;
+}
+
 #prevpage{
 	float: left;
 	display: none;
@@ -26,4 +34,25 @@
 #results{
 	width:50%;
 	margin: auto;
+}
+
+#pokemonImage{
+	display: block;
+	margin: auto;
+	width:20%;
+	height:20%;
+}
+
+#info{
+	text-align: center;
+}
+
+#statTable{
+	margin: 0 auto;
+	border: 1px solid black;
+}
+
+.stat{
+	padding: 5px;
+	border: 1px solid black;
 }
