--- a/styles.css
+++ b/styles.css
@@ -19,7 +19,7 @@
 	margin: auto;
 	text-align: center;
 	border-radius: 10px;
-	width:10%;
+	width: 40%;
 }
 
 #prevpage{
@@ -39,8 +39,7 @@
 #pokemonImage{
 	display: block;
 	margin: auto;
-	width:20%;
-	height:20%;
+	width: 300px;
 }
 
 #info{
@@ -48,7 +47,7 @@
 }
 
 #statTable{
-	margin: 0 auto;
+	margin: 100px auto;
 	border: 1px solid black;
 }
 
