--- a/styles.css
+++ b/styles.css
@@ -27,6 +27,13 @@
 	float: right;
 }
 
+.typeCovered{
+	text-align: center;
+	border-radius: 10px;
+	width:10%;
+	float: left;
+}
+
 .type2{
 	display: block;
 	margin: auto;
